# md-generator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  package-lock.json  package.json  pubsFromBib.py  pubsFromTSV.py  pyproject.toml  release.config.js  renovate.json
.github/workflows/: build-release.yml
src/md_generator/: .env.default  __init__.py  pubsFromBib.py
tests/: .env.test  pubsFromBibTest.py  refs.bib  test_pubsFromBib.py
