[tool.poetry]
name = "md_generator"
version = "0.1.0"
description = ""
authors = ["Ashley Caselli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^3.0.0"
pybtex = "^0.25.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
